# alex-ai-assistant

./: .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  SESSION_STATE.md  cloudbuild.yaml  project_reseach.txt  pyproject.toml  requirements.txt  tools.yaml
.claude/: settings.local.json
alex/: __init__.py  config.py  main.py
alex/agents/: __init__.py  edges.py  graph.py  state.py
alex/agents/nodes/: __init__.py  chat.py  classify.py  engineer.py  memory.py  self_modify.py  trade.py
alex/api/: __init__.py  routes.py
alex/brokerage/: __init__.py  tastytrade_client.py  tastytrade_tools.py
alex/cortex/: __init__.py  claude.py  flash.py  pro.py  router.py
alex/engineering/: __init__.py  wrapper.py
alex/memory/: __init__.py  graph_store.py  postgres_store.py  retriever.py  summarizer.py
alex/sync/: __init__.py  db_sync.py
alex/tools/: __init__.py  filesystem.py
infrastructure/: Dockerfile  cloudbuild.yaml
schema/: deploy_now.py  deploy_postgres_schema.py  deploy_schema.py  neo4j_schema.cypher  postgres_schema.sql  queries.cypher  update_vector_indexes.py
schema/migrations/: 003_add_trades_table.sql
scripts/: migrate_neo4j_to_postgres.py  setup_gcp.sh  setup_sync_schedule.sh
tests/: __init__.py  test_config.py  test_postgres_store.py  test_state.py
tests/brokerage/: __init__.py  test_tastytrade_tools.py
web/: index.html
